--- a/fastlane/changelog.txt
+++ b/fastlane/changelog.txt
@@ -1,7 +1,10 @@
-Git and Python are working! Sorry for taking so long to get this build out. In the future I'll push builds whenever I fix something interesting instead of waiting a month first :)
+IMPORTANT: You will need to uninstall the app before installing this build, otherwise you'll get an error on launch.
 
-I've also fixed a lot of bugs in the emulator, including implementing atomic operations so code that uses threads will actually work. This build also includes quite a few pull requests and patches from strangers who found the project on the internet and decided to help out. Many thanks to everyone who contributed. The full commit log for this build doesn't fit into the 4000 character limit, so you can find it here: https://gist.github.com/tbodt/b8b203e9011146b3b03bf39d71902f60
+The big fix here is changing the database from GDBM to SQLite, making it like 100x more reliable. No more mysterious vanishing files! (If any of your files do mysteriously vanish, please tell me.)
+
+A couple other fixes: pip and ffmpeg no longer segfault when expanding large allocations, and files actually show up in the Files app like they're supposed to. So you can use youtube-dl to download separate audio and video, extract them through the Files app, and have no way of merging them!
 
 Send bug reports or feedback here: https://github.com/tbodt/ish/issues
 Join the Discord: https://discord.gg/SndDh5y
 Give me money: https://patreon.com/tbodt
+
