--- a/fastlane/changelog.txt
+++ b/fastlane/changelog.txt
@@ -1,24 +1,25 @@
-HOTFIX for build 39: ssh was broken and the paste button was the wrong color in dark mode. Release notes for build 39 are pasted below for your convenience.
-
 New stuff:
-- irssi
-- rubygems
-- fish
-- traceroute (thanks @wallisch)
-- mtr
-- rcl and rcr are implemented, leaving gcc with no more known reasons to crash
-- Enough of /proc for ps and killall to work
-- epoll (you can now install python packages with dependencies!)
+- zsh
+- Background jobs (Ctrl-Z, bg, fg, etc)
+- ~10% performance improvement from correctly tracking the last JIT block
+- top runs (though it's useless since CPU usage is always displayed as 0%)
 
 UI stuff:
-- Paste button (with bad icon, oh well)
+- Option in settings to change launch command (also general settings reorganization)
 
 Bug fixes:
-- phpinfo() crashing the app
-- tar hanging after finishing extraction
-- Rare crash when starting a process due to RNG failure
+- Rounding error when adding 18446744073709551616 and 1.5
+- Crash when trying to run top
+- Selection being immediately copied to the clipboard if Speak Selection is enabled in iOS settings
+- Make a test network connection on startup, to hopefully fix network permission popup not appearing on devices sold in China
+- Crash when running a script with a #! line pointing to a nonexistent file
+- ^C not appearing when you press Ctrl-C and it kills the program
+- Ctrl-C not flushing the input buffer
+- Arrow keys not working in some programs
+- Emacs and Ruby summoning nasal demons after receiving a signal
 
-Send bug reports or feedback here: https://github.com/tbodt/ish/issues
+Send bug reports or feedback here: https://github.com/tbodt/ish/issues (or by email, if you prefer)
+Follow iSH on Twitter: https://twitter.com/iSH_app
 Join the Discord: https://discord.gg/SndDh5y
 Give me money: https://patreon.com/tbodt
 
