--- a/fastlane/changelog.txt
+++ b/fastlane/changelog.txt
@@ -1,36 +1,10 @@
-HOTFIX:
-- Passing arguments to #! scripts like youtube-dl didn't work
-- youtube-dl was 50% slower than it used to be
-- There is now extra debugging code so I can fix that weird crash when doing things like apk upgrade
-Release notes for previous build are included below.
+Just one bug fix in this build:
+- Files opened from the Files app having random numbers as names, preventing them from being syntax highlighted in some apps and opening at all in other apps
 
-New stuff:
-- Beta quality read/write Files app support
-- File locking
-- Forking and exiting is now 10x faster
-- Probably more that I missed
-
-Bug fixes
-- Error when running a program with more than 256 arguments
-- `RLIM_INFINITY` on `RLIMIT_NOFILE` being interpreted as -1
-- Zero bytes on a terminal being interpreted as newlines
-- Crash when running dmesg and the log buffer is too big
-- Various problems with pty semantics, to get zpty working better
-- lld showing incorrect output
-- Very serious problems caused by renaming directories
-- Crash when dealing with a path such as /../..
-
-About the security content of iSH build 46
-==========================================
-
-Impact: A malicious user may be able to execute arbitrary code on their own device
-
-Description: A memory corruption issue was addressed with improved memory handling.
-
-CVE-2019-XXXX: Saagar Jha
+Also, if you clean install this build, you'll get Alpine 3.9.0 instead of 3.8.2.
 
 Send bug reports or feedback here: https://github.com/tbodt/ish/issues (or by email, if you prefer)
 Follow iSH on Twitter: https://twitter.com/iSH_app
 Join the Discord: https://discord.gg/SndDh5y
-Give me money: https://patreon.com/tbodt
+Give me money here: https://patreon.com/tbodt
 
