--- a/fastlane/changelog.txt
+++ b/fastlane/changelog.txt
@@ -1,22 +1,11 @@
-HOTFIX for last build that would crash as soon as you tapped the close button on the about box. Release notes for previous build pasted below for your convenience.
-
 Fixed bugs:
-- Line drawing characters appearing as q and x
-- Illegal instruction in latest gcc
-- Reported "out of memory" when running composer install
-- Vim looking totally screwed up in screen/tmux
-- "Permission denied" when using gcc with a non-root user
-- "Bad file descriptor" when using socketpair in python
-- GPG crashing
-- ssh-agent crashing
-- Fixed clear screen shortcut
+- Free space reported incorrectly (now rtorrent doesn't shut down thinking it's out of disk space)
+- Total memory reported incorrectly
+- Incorrect 16-bit signed right shifting on arm
+- Composer deleting its own output (it thought the directory was empty, it was not)
 
 New stuff:
-- Dark theme in about box if your terminal is dark
-- Elixir/Erlang kinda works about 20% of the time
-- Backtick->escape and option->meta mappings
-- SF Symbols on iOS 13
-- Hyperlinks using escape sequences
+- VoiceOver reads terminal output, making iSH the best iOS terminal for blind people by a long shot. Seriously, why is every other terminal so broken? Blink doesn't read new output even though it uses the same terminal emulator as iSH, Shelly won't let you select anything in the terminal, Termius doesn't let you select anything at all.
 
 Send bug reports or feedback here: https://github.com/tbodt/ish/issues (or by email, if you prefer)
 Follow iSH on Twitter: https://twitter.com/iSH_app
